[package]
name = "csaf"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.23"

utils = { path = "../utils" }
log = "0.4"