[package]
name = "cu-scanner"
version = "1.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
database = { path = "../database" }
utils = { path = "../utils" }
csaf = { path = "../csaf" }
parser = { path = "../parser" }
oval = { path = "../oval" }
csaf_fetcher = { path = "../networking/csaf_fetcher" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
actix_server = { path = "../networking/actix_server" }