[package]
name = "database"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio-postgres = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
oval = { path = "../oval"}
csaf = { path = "../csaf"}
utils = { path = "../utils"}
log = "0.4"
chrono = "0.4.42"
parser = { path = "../parser" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }