[package]
name = "parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
oval = { path = "../oval" }
csaf = { path = "../csaf" }
utils = { path = "../utils" }
csaf_database = { path = "../csaf_database" }
chrono = "0.4.42"
regex = "1.11.2"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.23"
log = "0.4"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }