[package]
name = "actix_server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
actix-web = "4.0"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
utils = { path = "../../utils" }
database = { path = "../../database" }
serde = { version = "1.0", features = ["derive"] }
csaf = { path = "../../csaf" }
parser = { path = "../../parser" }
oval = { path = "../../oval" }
serde_json = "1.0"