[package]
name = "csaf_fetcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "blocking"] }
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 异步工具
futures = "0.3"
# CSAF 数据结构
csaf = { path = "../../csaf" }
# 错误处理
thiserror = "1.0"
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志
log = "0.4"
# URL 解析
url = "2.5"

[dev-dependencies]
# 测试辅助
env_logger = "0.11"
# 配置解析（用于示例）
utils = { path = "../../utils" }
